@@ -12,6 +12,7 @@ The following bugs have been fixed or resolved on this branch.
         even though it's generated by --gen-suppressions=yes
 498143  False positive on EVIOCGRAB ioctl
 501348  glibc built with -march=x86-64-v3 does not work due to ld.so memcmp
+501893  Missing suppression for __wcscat_avx2 (strcat-strlen-avx2.h.S:68)?
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
